<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_book_cab"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/nav_book_cab" />

        <item
            android:id="@+id/nav_our_services"
            android:icon="@drawable/ic_local_car_wash_black_24dp"
            android:title="@string/nav_our_services" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_font_download_black_24dp"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/nav_contact_us" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy_black_24dp"
            android:title="@string/nav_privacy_policy" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/nav_share" />

    </group>

</menu>