<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dandenongtaxi13cab.Fragments.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            fontPath="fonts/Oxygen_Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_about_us"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_us_text"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact_us_text"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/contact_us_text_one"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/contact_us_text_two"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/contact_us_text_three"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/Oxygen_Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact_us_text_four"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
</ScrollView>






