<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.dandenongtaxi13cab.Fragments.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <TextView
            fontPath="fonts/Oxygen_Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nav_contact_us"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edt_Name"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="MissingPrefix,RtlSymmetry">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/edt_ContactNo"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:hint="@string/contact_no_text"
            android:inputType="number"
            android:maxLength="10"
            android:padding="8dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="MissingPrefix,RtlSymmetry" />

        <EditText
            android:id="@+id/edt_Email"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="MissingPrefix,RtlSymmetry" />

        <EditText
            android:id="@+id/edt_YourMsg"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:hint="@string/your_message"
            android:padding="8dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="MissingPrefix,RtlSymmetry" />

        <Button
            android:id="@+id/btn_Send"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@android:color/white"
            tools:ignore="MissingPrefix,RtlSymmetry" />

    </LinearLayout>


    <TextView
        fontPath="fonts/Oxygen_Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nav_contact_us"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:ignore="MissingPrefix" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:visibility="gone" />

</LinearLayout>

