<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/linearUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/logo_banner" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearUpper"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNavClickHereTxt"
            fontPath="fonts/Oxygen_Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_here_text"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            tools:ignore="MissingPrefix,RelativeOverlap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_phone_android_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvNavContactText"
                fontPath="fonts/Oxygen_Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contact_no"
                android:textColor="@android:color/black"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_call_white_24dp"
        tools:ignore="RelativeOverlap,VectorDrawableCompat" />

</RelativeLayout>


